# LyraNote

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  commitlint.config.js  docker-compose.prod.yml  docker-compose.yml  lyra  nginx.prod.conf  nginx.system.example.conf  package-lock.json  package.json  patch_home.js  pnpm-lock.yaml  pnpm-workspace.yaml  start.sh  turbo.json  vercel.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit
api/: .dockerignore  .env.example  alembic.ini  (+3 more)
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  runtime.rs  session.rs
apps/desktop/src-tauri/src/app/: bootstrap.rs  events.rs  menu.rs  mod.rs  shortcuts.rs  tray.rs  windows.rs
apps/desktop/src-tauri/src/commands/: diagnostics.rs  files.rs  mod.rs  runtime.rs  security.rs  shell.rs
apps/desktop/src-tauri/src/native/: diff.rs  file_probe.rs  hashing.rs  mod.rs  pdf_probe.rs  preprocess.rs
apps/desktop/src-tauri/src/platform/: clipboard.rs  dialogs.rs  file_system.rs  macos.rs  mod.rs  notifications.rs
apps/desktop/src-tauri/src/runtime/: health.rs  jobs.rs  mod.rs  sidecar.rs  state.rs  supervisor.rs  watchers.rs
apps/desktop/src-tauri/src/security/: keychain.rs  mod.rs  secrets.rs  session.rs
apps/desktop/src-tauri/src/shared/: types.rs
(+1124 files in other folders)
