[package]
name = "lyranote-desktop"
version = "0.1.0"
description = "LyraNote Desktop Client"
authors = ["LyraNote Team"]
license = ""
repository = ""
default-run = "lyranote-desktop"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "lyranote_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lyranote-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-notification = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
